// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/azure-pipelines/extract extractContainer() should extract container information 1`] = `
Object {
  "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
  "currentDigest": undefined,
  "currentValue": "16.04",
  "datasource": "docker",
  "depName": "ubuntu",
  "depType": "docker",
  "replaceString": "ubuntu:16.04",
  "versioning": "ubuntu",
}
`;

exports[`manager/azure-pipelines/extract extractPackageFile() extracts dependencies 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "refs/tags/{{newValue}}",
    "currentValue": "v0.5.1",
    "datasource": "git-tags",
    "depName": "user/repo",
    "depType": "gitTags",
    "lookupName": "https://github.com/user/repo.git",
    "replaceString": "refs/tags/v0.5.1",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "16.04",
    "datasource": "docker",
    "depName": "ubuntu",
    "depType": "docker",
    "replaceString": "ubuntu:16.04",
    "versioning": "ubuntu",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": "sha256:3870d35b962a943df72d948580fc66ceaaee1c4fbd205930f32e0f0760eb1077",
    "currentValue": "3.7",
    "datasource": "docker",
    "depName": "python",
    "depType": "docker",
    "replaceString": "python:3.7@sha256:3870d35b962a943df72d948580fc66ceaaee1c4fbd205930f32e0f0760eb1077",
  },
]
`;

exports[`manager/azure-pipelines/extract extractRepository() should extract repository information 1`] = `
Object {
  "autoReplaceStringTemplate": "refs/tags/{{newValue}}",
  "currentValue": "v1.0.0",
  "datasource": "git-tags",
  "depName": "user/repo",
  "depType": "gitTags",
  "lookupName": "https://github.com/user/repo.git",
  "replaceString": "refs/tags/v1.0.0",
}
`;
